# orbitus

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.js
orbitus/: Cargo.toml
orbitus/src/: build  main.rs
orbitus/src/api/: mod.rs
orbitus/src/cli/: mod.rs
orbitus/src/err/: mod.rs
orbitus/src/srv/: mod.rs  pages.rs  routs.rs
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/auth/add/: route.ts
src/app/auth/kerbros/: route.ts
src/app/login/: page.tsx
src/components/: auth.tsx
src/script/: database.ts  keypair.ts
web/src/layouts/: fallback.astro
web/src/pages/: index.astro
web/src/pages/fallback/: index.astro
